Fixed onboarding heading alignment

--- a/src/app/partials/onboarding/onboarding.component.scss
+++ b/src/app/partials/onboarding/onboarding.component.scss
@@ -1,6 +1,10 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   width: 100%;
+  height: 100%;
   text-align: left;
 }
 
@@ -15,5 +19,6 @@ p {
 @media (max-width: 768px) {
   :host {
     text-align: center;
+    align-items: center;
   }
 }
