--- a/src/styles.scss
+++ b/src/styles.scss
@@ -136,8 +136,6 @@ label,
 button.btn,
 a.btn {
   display: inline-block;
-  align-self: center;
-  margin: 0 auto;
   padding: 0.6em 1.2em;
   border: 1px solid var(--wpasg-color-btn);
   border-radius: 40px;
